# Tesis_2.0

./: .editorconfig  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Rodrigo_Project_Tests.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _GENERATE_VS2015_x86.bat  _GENERATE_VS2019_x86.bat  cmake_install.cmake  compile.sh
dep/cminpack/: cminpack_s.lib  cminpack_s_d.lib
dep/cminpack/lib/Debug/: cminpack_d.lib  cminpack_s_d.lib  cminpacks_s_d.lib
dep/cminpack/lib/Debug/old/: cminpack.lib
dep/cminpack/lib/Release/: cminpack.lib  cminpack_s.lib  cminpacks_s.lib
src/: CMakeLists.txt  cmake_install.cmake
src/Calibration_Ring/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Calibration_Ring.sln  Calibration_Ring.vcxproj  Calibration_Ring.vcxproj.filters  camera_calibration.h  camera_calibration_ring.h  cmake_install.cmake  main_calibration_ring.cpp  results.csv
src/Calibration_Ring/Calibration_Ring.dir/Debug/: Calibration_Ring.exe.recipe  Calibration_Ring.ilk
src/Calibration_Ring/Calibration_Ring.dir/Debug/Calibration_Ring.tlog/: CL.command.1.tlog  CL.write.1.tlog  Calibration_Ring.lastbuildstate  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/Calibration_Ring/Calibration_Ring.dir/Release/: Calibration_Ring.exe.recipe
src/Calibration_Ring/Calibration_Ring.dir/Release/Calibration_Ring.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Calibration_Ring.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/Calibration_Ring/ring/: pattern_search.h  projective_invariants.h
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
